examples/dnspolicy-conditions/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web-istio
  namespace: ${DNSPOLICY_NAMESPACE}
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: api
      hostname: app.${KUADRANT_ZONE_ROOT_DOMAIN}
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-app-tls
            kind: Secret
